--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "super-check",
+  "name": "super-responsible",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://haakandev.github.io/govhack-2020",
